--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Anta&display=swap");
-    </style>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
-    <style>
+      @charset "UTF-8";
       :root {
         --bs-blue: #0d6efd;
         --bs-indigo: #6610f2;
@@ -175,6 +169,10 @@
         font-family: Anta, sans-serif;
       }
     </style>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Anta&display=swap");
+    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link
       rel="stylesheet"
       href="styles-JJMDZNCA.css"
