--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 </style><link rel="stylesheet" href="styles-REXWKD3N.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-REXWKD3N.css"></noscript></head>
   <body>
     <app-root></app-root>
-  <script src="polyfills-BJX5WH5B.js" type="module"></script><script src="main-IH73WMBM.js" type="module"></script></body>
+  <script src="polyfills-BJX5WH5B.js" type="module"></script><script src="main-PVLNZWAF.js" type="module"></script></body>
 </html>
