--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 </style><link rel="stylesheet" href="styles-OXHTHT7F.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-OXHTHT7F.css"></noscript><link rel="modulepreload" href="chunk-SUGXFXJQ.js"></head>
   <body>
     <app-root></app-root>
-  <script src="polyfills-BJX5WH5B.js" type="module"></script><script src="main-QTMIGX33.js" type="module"></script></body>
+  <script src="polyfills-BJX5WH5B.js" type="module"></script><script src="main-Z6NQVBT2.js" type="module"></script></body>
 </html>
